brat/test/golden/error/bad_underscore.brat
uscore :: { Int -> Int }
uscore = { i => _ }