brat/test/golden/error/bad_underscore.brat.golden
Error in test/golden/error/bad_underscore.brat@FC {start = Pos {line = 2, col = 12}, end = Pos {line = 2, col = 18}}:
uscore = { i => _ }
           ^^^^^^

  Elab error "Noun required at this position"

